--- a/APPOINTMENT-SERVICE.properties
+++ b/APPOINTMENT-SERVICE.properties
@@ -3,7 +3,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 server.port=8084
 
 spring.application.name=APPOINTMENT-SERVICE
