--- a/HAIRSALON-SERVICE.properties
+++ b/HAIRSALON-SERVICE.properties
@@ -3,7 +3,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.application.name=HAIRSALON-SERVICE
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
